fix navigation buttons being too close

--- a/css/webflow.css
+++ b/css/webflow.css
@@ -1509,6 +1509,11 @@ figcaption {
         -ms-grid-rows: auto auto auto;
         grid-template-rows: auto auto auto;
     }
+    .navbar-font {
+        font-family: Montserrat, sans-serif;
+        font-size: 16px;
+        font-weight: 400;
+    }
 }
 
 @media screen and (max-width: 479px) {
